# rust-template

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  ci.sh  deny.toml
src/: main.rs
