[package]
name = "rust-template"
version = "0.1.0"
edition = "2021"
authors = ["elbaro <elbaro@users.noreply.github.com>"]
publish = false

[dependencies]
# arc-swap = "1.6.0"
# axum = "0.6.11"
clap = { version = "4.2.4", features = ["derive"] }
color-eyre = "0.6.2"
# core_affinity = "0.8.0"
# dashmap = "5.4.0"
# futures = "0.3.27"
# governor = "0.5.1"
# serde = { version = "1.0.158", features = ["derive"] }
thiserror = "1.0.40"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }

# Observability

log = "0.4"
env_logger = "0.10"
# tracing = "0.1.37"
# tracing-opentelemetry = "0.18.0"
# tracing-subscriber = "0.3.16"
# metrics = "0.21.0"
# metrics-exporter-prometheus = "0.12.0"
# metrics-util = "0.15.0"
# opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
# opentelemetry-otlp = { version = "0.11.0", default-features = false, features = [
#     "http-proto",
# ] }
